# OS

lab1_WinLib/DynVector/: DynVector.sln  DynVector.vcxproj  Vector.cpp  Vector.h
lab1_WinLib/StatNumber/: Number.cpp  Number.h  StatNumber.sln  StatNumber.vcxproj
lab1_WinLib/TestLib/: TestLib.cpp  TestLib.sln  TestLib.vcxproj
lab2_LinuxLib/Number/: CMakeLists.txt  Number.cpp  Number.h
lab2_LinuxLib/TestLibLinux/: CMakeLists.txt  main.cpp
lab2_LinuxLib/Vector/: CMakeLists.txt  Vector.cpp
lab3_Console/LinuxConsole/: make.sh
lab3_Console/LinuxConsole/Number/: Number.h
lab3_Console/LinuxConsole/Vector/: Vector.h
lab3_Console/WindowsConsole/: make.ps1
lab3_Console/WindowsConsole/TestApp/: main.cpp
lab4_Channel/: buffered_channel.h
